# phylo

./: .env.example  .eslintrc.js  .gitignore  .lintstagedrc.json  DEVELOPMENT.md  GEMINI.md  Makefile  README.md  docker-compose.yml  family_tree_tasks.md  nginx-phylo.conf  package-lock.json  package.json  tsconfig.base.json
apps/backend/: .env.example  README.md  db.py  main.py  models.py  pyproject.toml  requirements.txt  run_all_tests.fish  run_all_tests.sh  schemas.py  test_database_state.py  verify_fixes.py
apps/backend/api/: auth.py  avatars.py  examples.py  gallery.py  invites.py  main.py  members.py  memberships.py  notifications.py  relationships.py  trees.py  users.py
apps/backend/docs/: ARCHITECTURE_DIAGRAMS.md  AUTHENTICATION.md  BUGFIX_TREE_SETTINGS_ATTRIBUTES.md  BUGFIX_USER_REGISTRATION_INVITES.md  DATABASE_MIGRATION.md  DATABASE_SETUP.md  DIRECTORY_REORGANIZATION.md  INTEGRATION_GUIDE.md  INVITATIONS.md  INVITATIONS_QUICK_REF.md  MEMBER_MANAGEMENT.md  MEMBER_MANAGEMENT_QUICK_REF.md  MODEL_ENHANCEMENTS_SUMMARY.md  QUICKSTART.md  RELATIONSHIPS.md  RELATIONSHIPS_QUICK_REF.md  ROLE_MANAGEMENT.md  ROLE_MANAGEMENT_QUICK_REF.md  TESTING_QUICK_REFERENCE.md  TESTING_ROLE_MANAGEMENT.md  TIMEZONE_FIX_2025-10-01.md  TREE_SETTINGS_VALIDATION.md  VALIDATION_COMPLETE.md  VALIDATION_FLOW_DIAGRAMS.md  VALIDATION_QUICK_REFERENCE.md  postman_collection.json
apps/backend/family_tree_backend.egg-info/: PKG-INFO
apps/backend/migrations/: env.py
apps/backend/models/: __init__.py  gallery_photo.py  notification_settings.py
apps/backend/schemas/: __init__.py
apps/backend/services/: email.py  email_service.py  (+2 more)
(+380 files in other folders)
